# finansys_api

./: .gitignore
backend/: CONFERÊNCIA-MARÇO.xlsx  fs.sqlite3  prestart.py  pyproject.toml  servidor_teste.py
backend/alembic/: env.py
backend/alembic/versions/: 2e0ab4c5d4e3_update_lancamento.py  52f9ce617f02_update_all.py  6170e89178fe_update_all.py  67cec0621335_add_tables.py  e4de1ebfbf3b_add_historico.py  ebc48123e636_update_lancamento.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: __init__.py  auth.py  dizimistas.py  documentos.py  historicos.py  lancamentos.py  obreiros.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  base.py  crud_dizimista.py  crud_documento.py  crud_historico.py  crud_lancamento.py  crud_obreiro.py
backend/app/db/: base.py  init_db.py
backend/app/models/: __init__.py  dizimista.py  documento.py  historico.py  lancamento.py  movimentacao.py  obreiro.py
backend/app/schemas/: __init__.py  dizimista.py  documento.py  entrada.py  historico.py  lancamento.py  obreiro.py  paginacao.py  saida.py
backend/app/utils/: date_time.py
fsenv/: pyvenv.cfg
fsenv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  start  start.cmd
